--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 
 <footer>
     <div class="footer-content">
-      <p> 2025 Mayottre info - Tous droits réservés.</p>
+      <p> 2025 Maoré prestaTV - Tous droits réservés.</p>
       <p>Contact : <a href="mailto:contact@mayotte.info.com">contact@[nomdelachaîne].com</a> | Téléphone : +33 1 23 45 67 89</p>
       <p><a href="mentions-legales.html">Mentions légales</a> | <a href="politique-confidentialite.html">Politique de confidentialité</a> | <a href="conditions-utilisation.html">Conditions générales d'utilisation</a></p>
       <div class="social-links">
