--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,12 +1,25 @@
-<header>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="apropos">apropos</a></li>
-                <li><a href="formulaireProgrammeTv">formulaireProgrammeTv</a></li>
-                <li><a href="programmeTv">programmeTv</a></li>
-            
-            </ul>
-        </nav>
-    </div>
-</header>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/CSS/nav.css">
+</head>
+<body>
+    <header>
+            <nav class="nav">
+                <ul>
+                    <li><a href="apropos">apropos</a></li>
+                    <li><a href="formulaireProgrammeTv">formulaireProgrammeTv</a></li>
+                    <li><a href="programmeTv">programmeTv</a></li>
+                    <li><a href="login">login</a></li>
+                    <li><a href="signup">signup</a></li>
+                
+                </ul>
+            </nav>
+    </header>
+</body>
+</html>
+
+
