--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 
     <div class="form-container">
         <h1>Connexion</h1>
-        <form action="/submit-login" method="POST">
+        <form action="/login" method="POST">
             <!-- E-mail -->
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email" required placeholder="Entrez votre e-mail">
